--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,9 +6,10 @@ add_library(AppCode INTERFACE)
 add_code_compile_defaults(AppCode)
 
 target_sources(AppCode INTERFACE
-    # Mycelia.cpp
-    PluginEditor.cpp
-    PluginProcessor.cpp
+    Mycelia.cpp
+    MyceliaEditor.cpp
+    # PluginEditor.cpp
+    # PluginProcessor.cpp
     # NodeManager.cpp
 
     # dsp/BaseNode.cpp
