Refactored Mycelia to be the Controller, Mycelia Model as the Model in an MVC architecture

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,7 +9,7 @@ target_sources(
     AppCode
     INTERFACE
     Mycelia.cpp
-)
+    MyceliaModel.cpp
 
     # dsp/BaseNode.cpp
     # dsp/DelayNode.cpp
