Added MyceliaView with a custom graphical object

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ target_sources(
     INTERFACE
     Mycelia.cpp
     MyceliaModel.cpp
+    MyceliaView.cpp
 
     # dsp/BaseNode.cpp
     # dsp/DelayNode.cpp
