Add a DuckingCompressor implementation with ducking level controlled by Scarcity/Abundance at the output of the Delay Nodes. Updates to gain staging in the design, ramp times, filter resonances

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,7 @@ target_sources(
     dsp/DelayProc.cpp
     dsp/DiffusionControl.cpp
     dsp/Dispersion.cpp
+    dsp/DuckingCompressor.cpp
     dsp/OutputNode.cpp
 
     # dsp/BaseNode.cpp
